quality of life

--- a/index.html
+++ b/index.html
@@ -44,6 +44,40 @@
       id="link"
       >SREĆNO!</a
     >
+    <div class="input-div">
+      <label for="tekst">Pomnozi dva ista broja dobijena od slike iznad!</label
+      ><br />
+      <input
+        id="input"
+        type="text"
+        id="tekst"
+        style="background-color: gray"
+      /><br />
+      <button
+        onclick="provera()"
+        id="proveri"
+        style="background-color: gray; border-radius: 20px; padding: 10px"
+      >
+        PROVERI
+      </button>
+    </div>
+
+    <div class="popup" id="popup">
+      <div class="div-helper">
+        <p>
+          Čestitamo, za sada! <br />
+          Odazivam se na bxdtreasurehunt@gmail.com, ali bez lozinke napori su ti
+          beskorisni. <br />1.Prvi deo te reči čini pita sa svojih 10
+          decimala.<br />
+          2.Drugi deo čini broj koji se dobije zbirom meseca i dana rođenja
+          osobe koja nas je okupila ovde. <br />
+          3.Treci deo su samo tri slova, tri mala slova koja nam ispunjuju srca
+          već duže vreme, a tek će nam ispuniti u martu!<br />
+          Kada spojiš ova tri dela put pred tobom će biti obasjan, ali samo na
+          kratko!
+        </p>
+      </div>
+    </div>
   </body>
   <script src="script.js"></script>
 </html>
