--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         <div>
           <h2>PRVO MESTO</h2>
           <div class="div-winners">
-            <img src="" alt="" />
+            <img id="img1" src="/IMG/DIZAJN.jpg" alt="Dizajn" />
           </div>
         </div>
 
         <div>
           <h2>DRUGO MESTO</h2>
           <div class="div-winners">
-            <img src="" alt="" />
+            <img id="img2" src="/IMG/AR.jpg" alt="AR" />
           </div>
         </div>
 
         <div>
           <h2>TREĆE MESTO</h2>
           <div class="div-winners">
-            <img src="" alt="" />
+            <img id="img3" src="" alt="" />
           </div>
         </div>
       </div>
