--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div>
           <h2>TREĆE MESTO</h2>
           <div class="div-winners">
-            <img id="img3" src="" alt="" />
+            <img id="img3" src="/IMG/CR.jpg" alt="CR" />
           </div>
         </div>
       </div>
